Use same JVM command line options as current Alioth web site runs do